[gd_scene load_steps=4 format=3 uid="uid://ddqrsba884ssx"]

[ext_resource type="Script" path="res://rod_bounds.gd" id="1_7ih63"]
[ext_resource type="PackedScene" uid="uid://reoe3kn1ht5c" path="res://rod_target.tscn" id="3_0r4j4"]
[ext_resource type="PackedScene" uid="uid://bas83gf4l2ygv" path="res://fish_target.tscn" id="4_hq1gq"]

[node name="RodBounds" type="Node2D"]
position = Vector2(0, 97)
script = ExtResource("1_7ih63")

[node name="BottomLine" type="Line2D" parent="."]
position = Vector2(0, 25)
points = PackedVector2Array(-10, 0, 10, 0)
width = 1.0

[node name="TopLine" type="Line2D" parent="."]
position = Vector2(0, -25)
points = PackedVector2Array(-10, 0, 10, 0)
width = 1.0

[node name="RodTarget" parent="." instance=ExtResource("3_0r4j4")]

[node name="FishTarget" parent="." instance=ExtResource("4_hq1gq")]
